--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,12 @@ project(2DEngine)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(EXECUTABLE_NAME "${PROJECT_NAME}Demo")
+
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-add_executable(runner src/main.cpp)
+add_executable(${EXECUTABLE_NAME} src/main.cpp)
+
+target_link_libraries(${EXECUTABLE_NAME} ${SDL2_LIBRARIES})
