--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,15 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
-project(2DEngine)
+project(2DEngine LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-set(EXECUTABLE_NAME "${PROJECT_NAME}Demo")
-
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-add_executable(${EXECUTABLE_NAME} src/main.cpp)
 
-target_link_libraries(${EXECUTABLE_NAME} ${SDL2_LIBRARIES})
+cmake_minimum_required(VERSION 3.15)
+project(2DEngine LANGUAGES CXX)
+
+# Add subdirectories
+add_subdirectory(2DEngine)
+add_subdirectory(2DEngineDemo)
